--- a/hu_ol_94.adoc
+++ b/hu_ol_94.adoc
@@ -14,7 +14,7 @@ summary: Describes how to use Oracle Linux 9.4 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure Oracle Linux (OL) 9.4 with ONTAP as the target.
+You can use the ONTAP SAN host configuration settings to configure Oracle Linux 9.4 with ONTAP as the target.
 
 == Install the Linux Unified Host Utilities
 
