--- a/hu_ol_94.adoc
+++ b/hu_ol_94.adoc
@@ -150,7 +150,7 @@ devices {
 ----
 ====
 
-NOTE: To configure Oracle Linux 9.4 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_94.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.4.
+NOTE: To configure Oracle Linux 9.4 Red Hat Enterprise Kernel (RHEK), use the link:hu_rhel_94.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.4.
 
 === Configure KVM settings
 
