--- a/nvme_ol_94.adoc
+++ b/nvme_ol_94.adoc
@@ -15,7 +15,7 @@ summary: NVMe-oF Host Configuration for Oracle Linux 9.4 with ONTAP
 [.lead]
 include::_include/nvme/reuse-nvme-introduction.adoc[]
 
-.About this task
+== About this task
 
 The following support and features are available with the NVMe-oF host configuration for Oracle Linux 9.4 with ONTAP storage. You should also review the known limitations before starting the configuration process.
 
